bold class - spacing fixed

--- a/app/scss/base/typography.scss
+++ b/app/scss/base/typography.scss
@@ -63,3 +63,8 @@
     }
   }
 }
+
+//Bold
+.bold{
+  font-weight: var(--fw-700);
+}
